--- a/goodsList.html
+++ b/goodsList.html
@@ -8,7 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/public.css">
     <link rel="stylesheet" href="css/smartisan.min.css">
-    <link rel="stylesheet" href="css/index.min.css">
+    <link rel="stylesheet" href="css/goodsList.min.css">
 </head>
 
 <body>
@@ -17,263 +17,27 @@
     </div>
     <div id="main">
         <div class="global-center">
-            <section id="banner">
-                <div class="banner-container">
-                    <div class="imgBox">
-                        <div class="imgdiv banner1">
-                            <img src="./images/index-banner1.png" alt="">
-                        </div>
-                        <div class="imgdiv banner2">
-                            <img src="./images/index-banner2.jpeg" alt="">
-                        </div>
-                        <div class="imgdiv banner3">
-                            <img src="./images/index-banner3.png" alt="">
-                        </div>
-                    </div>
-                    <div class="cirBox">
-                        <ul>
-                            <li class="active"></li>
-                            <li></li>
-                            <li></li>
-                        </ul>
-                    </div>
-                </div>
-            </section>
-            <section id="advertisement">
-                <figure class="item">
-                    <img src="./images/advertisement1.jpg" alt="">
-                    <a href=""></a>
-                </figure>
-                <figure class="item">
-                    <img src="./images/advertisement2.jpg" alt="">
-                    <a href=""></a>
-                </figure>
-                <figure class="item">
-                    <img src="./images/advertisement3.jpg" alt="">
-                    <a href=""></a>
-                </figure>
-                <figure class="item">
-                    <img src="./images/advertisement4.jpg" alt="">
-                    <a href=""></a>
-                </figure>
-            </section>
-            <section id="hotBrand" class="building">
-                <div class="hotBrand-container floor-container">
-                    <div class="hotBrand-title floor-title">
-                        <h5>热门商品</h5>
-                        <div class="title-btn">
-                            <i class="title-btnLeft"></i>
-                            <i class="title-btnRight"></i>
-                        </div>
-                    </div>
-                    <div class="hotBrand-body floor-body">
-                        <ul class="hotBrand-body-container floor-body-list">
-                            <li>
-                                <figure>
-                                    <img src="https://resource.smartisan.com/resource/f195e666e089d4e3775ce67d8e9523ce.png?x-oss-process=image/resize,w_216/format,webp"
-                                        alt="">
-                                </figure>
-                                <article>
-                                    <h3>坚果 Pro 3</h3>
-                                    <h5>高通骁龙™ 855Plus · 4800 万模范四摄 · Smartisan OS 7.0</h5>
-                                </article>
-                                <aside>
-                                    <span>￥2,899.00</span>
-                                </aside>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </section>
-            <section id="building-container">
-                <section id="pro3" class="building">
-                    <div class="pro3-container floor-container">
-                        <div class="pro3-title floor-title">
-                            <h5>热门商品</h5>
-                        </div>
-                        <div class="pro3-body floor-body">
-                            <ul class="pro3-body-container floor-body-list">
-                                <li>
-                                    <figure class="list-pic">
-                                        <img src="https://resource.smartisan.com/resource/f195e666e089d4e3775ce67d8e9523ce.png?x-oss-process=image/resize,w_216/format,webp"
-                                            alt="">
-                                    </figure>
-                                    <article>
-                                        <h3>坚果 Pro 3</h3>
-                                        <h5>高通骁龙™ 855Plus · 4800 万模范四摄 · Smartisan OS 7.0</h5>
-                                    </article>
-                                    <aside>
-                                        <span>￥2,899.00</span>
-                                    </aside>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </section>
-                <section id="shell" class="building">
-                    <div class="shell-container floor-container">
-                        <div class="shell-title floor-title">
-                            <h5>热门商品</h5>
-                        </div>
-                        <div class="shell-body floor-body">
-                            <ul class="shell-body-container floor-body-list">
-                                <li class="mainPic">
-                                    <figure>
-                                        <img src="./images/shell-mainPic.jpg" alt="">
-                                    </figure>
-                                </li>
-                                <li>
-                                    <figure class="list-pic">
-                                        <img src="https://resource.smartisan.com/resource/f195e666e089d4e3775ce67d8e9523ce.png?x-oss-process=image/resize,w_216/format,webp"
-                                            alt="">
-                                    </figure>
-                                    <article>
-                                        <h3>坚果 Pro 3</h3>
-                                        <h5>高通骁龙™ 855Plus · 4800 万模范四摄 · Smartisan OS 7.0</h5>
-                                    </article>
-                                    <aside>
-                                        <span>￥2,899.00</span>
-                                    </aside>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </section>
-                <section id="iphone11" class="building">
-                    <div class="iphone11-container floor-container">
-                        <div class="iphone11-title floor-title">
-                            <h5>热门商品</h5>
-                        </div>
-                        <div class="iphone11-body floor-body">
-                            <ul class="iphone11-body-container floor-body-list">
-                                <li>
-                                    <figure class="list-pic">
-                                        <img src="https://resource.smartisan.com/resource/f195e666e089d4e3775ce67d8e9523ce.png?x-oss-process=image/resize,w_216/format,webp"
-                                            alt="">
-                                    </figure>
-                                    <article>
-                                        <h3>坚果 Pro 3</h3>
-                                        <h5>高通骁龙™ 855Plus · 4800 万模范四摄 · Smartisan OS 7.0</h5>
-                                    </article>
-                                    <aside>
-                                        <span>￥2,899.00</span>
-                                    </aside>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </section>
-                <section id="clothes" class="building">
-                    <div class="clothes-container floor-container">
-                        <div class="clothes-title floor-title">
-                            <h5>热门商品</h5>
-                        </div>
-                        <div class="clothes-body floor-body">
-                            <ul class="clothes-body-container floor-body-list">
-                                <li>
-                                    <figure class="list-pic">
-                                        <img src="https://resource.smartisan.com/resource/f195e666e089d4e3775ce67d8e9523ce.png?x-oss-process=image/resize,w_216/format,webp"
-                                            alt="">
-                                    </figure>
-                                    <article>
-                                        <h3>坚果 Pro 3</h3>
-                                        <h5>高通骁龙™ 855Plus · 4800 万模范四摄 · Smartisan OS 7.0</h5>
-                                    </article>
-                                    <aside>
-                                        <span>￥2,899.00</span>
-                                    </aside>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </section>
-                <section id="tnt" class="building">
-                    <div class="hotBrand-container floor-container">
-                        <div class="hotBrand-title floor-title">
-                            <h5>热门商品</h5>
-                        </div>
-                        <div class="hotBrand-body floor-body">
-                            <ul class="hotBrand-body-container floor-body-list">
-                                <li>
-                                    <figure class="list-pic">
-                                        <img src="https://resource.smartisan.com/resource/f195e666e089d4e3775ce67d8e9523ce.png?x-oss-process=image/resize,w_216/format,webp"
-                                            alt="">
-                                    </figure>
-                                    <article>
-                                        <h3>坚果 Pro 3</h3>
-                                        <h5>高通骁龙™ 855Plus · 4800 万模范四摄 · Smartisan OS 7.0</h5>
-                                    </article>
-                                    <aside>
-                                        <span>￥2,899.00</span>
-                                    </aside>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </section>
-                <section id="package" class="building">
-                    <div class="hotBrand-container floor-container">
-                        <div class="hotBrand-title floor-title">
-                            <h5>热门商品</h5>
-                        </div>
-                        <div class="hotBrand-body floor-body">
-                            <ul class="hotBrand-body-container floor-body-list">
-                                <li>
-                                    <figure class="list-pic">
-                                        <img src="https://resource.smartisan.com/resource/f195e666e089d4e3775ce67d8e9523ce.png?x-oss-process=image/resize,w_216/format,webp"
-                                            alt="">
-                                    </figure>
-                                    <article>
-                                        <h3>坚果 Pro 3</h3>
-                                        <h5>高通骁龙™ 855Plus · 4800 万模范四摄 · Smartisan OS 7.0</h5>
-                                    </article>
-                                    <aside>
-                                        <span>￥2,899.00</span>
-                                    </aside>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </section>
-                <section id="print" class="building">
-                    <div class="hotBrand-container floor-container">
-                        <div class="hotBrand-title floor-title">
-                            <h5>热门商品</h5>
-                        </div>
-                        <div class="hotBrand-body floor-body">
-                            <ul class="hotBrand-body-container floor-body-list">
-                                <li>
-                                    <figure class="list-pic">
-                                        <img src="https://resource.smartisan.com/resource/f195e666e089d4e3775ce67d8e9523ce.png?x-oss-process=image/resize,w_216/format,webp"
-                                            alt="">
-                                    </figure>
-                                    <article>
-                                        <h3>坚果 Pro 3</h3>
-                                        <h5>高通骁龙™ 855Plus · 4800 万模范四摄 · Smartisan OS 7.0</h5>
-                                    </article>
-                                    <aside>
-                                        <span>￥2,899.00</span>
-                                    </aside>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </section>
+            <section class="lists">
+                <ul>
+                    <li>
+                        <a href="">
+                            <figure class="list-pic">
+                                <img src="https://resource.smartisan.com/resource/d159521e479b26f3c97a1e4f00a5aefd.jpg?x-oss-process=image/resize,w_216/format,webp"
+                                    alt="">
+                            </figure>
+                            <article>
+                                <h3>smartisan 颈挂蓝牙耳机</h3>
+                                <h5>“圈铁一体代表作”</h5>
+                            </article>
+                            <aside>
+                                <span>￥199.00</span>
+                            </aside>
+                        </a>
+                    </li>
+                </ul>
             </section>
         </div>
     </div>
-    <section id="elevator">
-        <div class="elevator-container">
-            <ul class="elevator-list">
-                <li class="active">热门商品</li>
-                <li>坚果 Pro 3</li>
-                <li>保护套</li>
-                <li>iPhone</li>
-                <li>服饰专场</li>
-            </ul>
-        </div>
-        <div id="toTop">TOP</div>
-    </section>
     <footer>
     </footer>
 </body>
