--- a/public.html
+++ b/public.html
@@ -1,5 +1,3 @@
-<div id="header">
-
     <header>
         <h1></h1>
         <div class="header-container">
@@ -36,17 +34,17 @@
             <div class="nav-container">
                 <div class="nav-title">
                     <ul>
-                        <li id="index" class="active category"><a href="#">首页</a></li>
-                        <li id="phone" class="goods"><a href="#">手机</a></li>
-                        <li id="parts" class="category"><a href="#">官方配饰</a></li>
-                        <li id="clothes" class="category"><a href="#">服饰箱包</a></li>
-                        <li id="breath" class="category"><a href="#">畅呼吸</a></li>
-                        <li id="dna" class="goods"><a href="#">基因检测</a></li>
-                        <li id="print" class="goods"><a href="#">打印机</a></li>
-                        <li id="robot" class="goods"><a href="#">扫地机器人</a></li>
-                        <li id="screen" class="goods"><a href="#">TNT显示屏</a></li>
-                        <li id="culling" class="goods"><a href="#">精选好物</a></li>
-                        <li class="service"><a href="#">服务</a></li>
+                        <li id="index" class="active category"><a href="index.html">首页</a></li>
+                        <li id="phone" class="goods"><a href="goodsList.html?wd=坚果">手机</a></li>
+                        <li id="parts" class="category"><a href="goodsList.html">官方配饰</a></li>
+                        <li id="clothes" class="category"><a href="goodsList.html?wd=包">服饰箱包</a></li>
+                        <li id="breath" class="category"><a href="goodsList.html">畅呼吸</a></li>
+                        <li id="dna" class="goods"><a href="goodsList.html">基因检测</a></li>
+                        <li id="print" class="goods"><a href="goodsList.html?wd=打印机">打印机</a></li>
+                        <li id="robot" class="goods"><a href="goodsList.html">扫地机器人</a></li>
+                        <li id="screen" class="goods"><a href="goodsList.html?wd=TNT">TNT显示屏</a></li>
+                        <li id="culling" class="goods"><a href="goodsList.html">精选好物</a></li>
+                        <li class="service"><a href="goodsList.html">服务</a></li>
                     </ul>
                 </div>
                 <div class="nav-search">
@@ -169,46 +167,45 @@
             </div>
         </div>
     </nav>
-</div>
 
 
-<div id="footer" class="global-center">
-    <div class="footer-menu">
-        <ul>
-            <li class="items-group">
-                <h3>订单服务</h3>
-                <div class="item-name"><a href="#">购买指南</a><a href="#">送货政策</a>
-                </div>
-            </li>
-            <li class="items-group">
-                <h3>服务支持</h3>
-                <div class="item-name"><a href="#">零售门店</a><a href="#">自助服务</a><a href="#">维修门店</a></div>
-            </li>
-            <li class="items-group">
-                <h3>媒体中心</h3>
-                <div class="item-name"><a href="#">新闻动态</a><a href="#">官方视频</a><a href="#">图片资源</a></div>
-            </li>
-            <li class="items-group">
-                <h3>关注我们</h3>
-                <div class="item-name"><a href="#">新浪微博</a><a>官方微信</a><a href="#">荣誉奖项</a>
-                </div>
-            </li>
-        </ul>
-        <div class="footer-service">
-            <strong class="tel">400 - 603 - 5000</strong>
-            <h2 class="time">周一到周日 8:00 - 24:00</h2>
-            <h2 class="desc">(仅收市话费)</h2>
-            <div class="online"><a href="#">在线帮助</a></div>
+    <div id="footer" class="global-center">
+        <div class="footer-menu">
+            <ul>
+                <li class="items-group">
+                    <h3>订单服务</h3>
+                    <div class="item-name"><a href="#">购买指南</a><a href="#">送货政策</a>
+                    </div>
+                </li>
+                <li class="items-group">
+                    <h3>服务支持</h3>
+                    <div class="item-name"><a href="#">零售门店</a><a href="#">自助服务</a><a href="#">维修门店</a></div>
+                </li>
+                <li class="items-group">
+                    <h3>媒体中心</h3>
+                    <div class="item-name"><a href="#">新闻动态</a><a href="#">官方视频</a><a href="#">图片资源</a></div>
+                </li>
+                <li class="items-group">
+                    <h3>关注我们</h3>
+                    <div class="item-name"><a href="#">新浪微博</a><a>官方微信</a><a href="#">荣誉奖项</a>
+                    </div>
+                </li>
+            </ul>
+            <div class="footer-service">
+                <strong class="tel">400 - 603 - 5000</strong>
+                <h2 class="time">周一到周日 8:00 - 24:00</h2>
+                <h2 class="desc">(仅收市话费)</h2>
+                <div class="online"><a href="#">在线帮助</a></div>
+            </div>
+        </div>
+        <div class="footer-info">
+            <div class="copyright">
+                <i>Copyright © 2019 smartisan.com 版权所有</i><span>|</span>
+                <a href="">锤子商城隐私政策</a><span>|</span>
+                <a href="#">锤子商城用户协议</a>
+            </div>
+            <div class="icp">
+                <a href="#">京 ICP 备 19048576 号 - 1</a>
+            </div>
         </div>
     </div>
-    <div class="footer-info">
-        <div class="copyright">
-            <i>Copyright © 2019 smartisan.com 版权所有</i><span>|</span>
-            <a href="">锤子商城隐私政策</a><span>|</span>
-            <a href="#">锤子商城用户协议</a>
-        </div>
-        <div class="icp">
-            <a href="#">京 ICP 备 19048576 号 - 1</a>
-        </div>
-    </div>
-</div>
