--- a/goodsList.html
+++ b/goodsList.html
@@ -12,14 +12,13 @@
 </head>
 
 <body>
-    <div id="TopTop">
-
-    </div>
+    <div id="header"></div>
+    <div id="nav"></div>
     <div id="main">
         <div class="global-center">
             <section class="lists">
                 <ul>
-                    <li>
+                    <!-- <li>
                         <a href="">
                             <figure class="list-pic">
                                 <img src="https://resource.smartisan.com/resource/d159521e479b26f3c97a1e4f00a5aefd.jpg?x-oss-process=image/resize,w_216/format,webp"
@@ -33,13 +32,13 @@
                                 <span>￥199.00</span>
                             </aside>
                         </a>
-                    </li>
+                    </li> -->
+                    <li style="width: 100%; text-align: center; font-size: 20px;line-height: 60px;">搜索结果不存在</li>
                 </ul>
             </section>
         </div>
     </div>
-    <footer>
-    </footer>
+    <footer></footer>
 </body>
 <script src="libs/require.js" data-main="js/goodsListMain"></script>
 
