--- a/goodsDetails.html
+++ b/goodsDetails.html
@@ -16,7 +16,7 @@
     <div id="nav"></div>
     <div id="main">
         <div class="global-center">
-            <div class="items-wrapper">
+            <section class="items-wrapper">
                 <div class="imgBox">
                     <div class="gallery">
                         <figure class="imgList">
@@ -37,6 +37,9 @@
                         <div class="picShow-container">
                             <img src="./images/nav-breath_tab1_list1.jpg" alt="">
                         </div>
+                        <div class="picBig">
+                            <img src="./images/nav-breath_tab1_list1.jpg" alt="">
+                        </div>
                     </div>
                 </div>
                 <div class="detailsBox">
@@ -46,27 +49,41 @@
                         </div>
                         <div class="discriptionBox underline list">
                             <aside>商品描述</aside>
-                            <span class="discription">一款通行城市的全功能双肩包</span>
+                            <article class="discription">一款通行城市的全功能双肩包</article>
                         </div>
                         <div class="priceBox underline list">
                             <aside>商品价格</aside>
-                            <span class="price-container">¥269.00</span>
+                            <article class="price-container">269.00</article>
                         </div>
                         <div class="changeNum underline list">
                             <aside>数量选择</aside>
-                            <div class="select">
-                                <span class="down disabled">-</span><span class="num">1</span><span class="up">+</span>
-                            </div>
+                            <article class="select">
+                                <span class="down disabled btn">-</span><span class="num ">1</span><span class="up btn">+</span>
+                            </article>
                         </div>
                         <div class="btnBox underline list">
                             <div class="btn-container">
-                                <div class="toBuy">现在购买</div>
-                                <div class="addCar">加入购物车</div>
+                                <div class="toBuy btn">现在购买</div>
+                                <div class="addCar btn">加入购物车</div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
+            </section>
+            <section class="productInfo">
+                <div class="productInfo-container">
+                    <aside class="title">
+                        <h2>产品信息</h2>
+                    </aside>
+                    <article class="body">
+                            <img src="./images/goods5_detailImg01.jpg" alt="">
+                            <img src="./images/goods5_detailImg02.jpg" alt="">
+                            <img src="./images/goods5_detailImg03.jpg" alt="">
+                            <img src="./images/goods5_detailImg04.jpg" alt="">
+                            <img src="./images/goods5_detailImg05.jpg" alt="">
+                    </article>
+                </div>
+            </section>
         </div>
     </div>
     <footer></footer>
