--- a/goodsDetails.html
+++ b/goodsDetails.html
@@ -37,6 +37,7 @@
                         <div class="picShow-container">
                             <img src="./images/nav-breath_tab1_list1.jpg" alt="">
                         </div>
+                        <div class="glass"></div>
                         <div class="picBig">
                             <img src="./images/nav-breath_tab1_list1.jpg" alt="">
                         </div>
