--- a/login.html
+++ b/login.html
@@ -31,24 +31,29 @@
                         <input type="password" placeholder="密码">
                     </div>
                 </section>
+                <section class="forget">
+                    <div class="forget-container">
+                        <a href="register.html">去注册</a>
+                    </div>
+                </section>
                 <section class="loginBtn btn">
                     <div class="btn-container">
                         <a href="#">登录</a>
                     </div>
                 </section>
-                <section class="forget">
-                    
-                </section>
                 <section class="notice">
                     <div class="notice-container">
-                            <p>
-                                    登录代表你已同意 <a href="https://www.smartisan.com/support/#/agreement" target="_blank">法律声明</a> 和 <a href="https://www.smartisan.com/support/#/privacy" target="_blank">隐私条款</a>
-                            </p>
+                        <p>
+                            登录代表你已同意 <a href="https://www.smartisan.com/support/#/agreement" target="_blank">法律声明</a> 和
+                            <a href="https://www.smartisan.com/support/#/privacy" target="_blank">隐私条款</a>
+                        </p>
                     </div>
                 </section>
+                <section class="tips"></section>
             </div>
         </div>
     </main>
 </body>
+<script src="libs/require.js" data-main="js/loginMain"></script>
 
 </html>
