--- a/public.html
+++ b/public.html
@@ -22,10 +22,10 @@
         </div>
         <div class="header-aside">
             <div class="header-user icon">
-                <a href=""></a>
+                <a href="login.html"></a>
             </div>
             <div class="header-shopCar icon">
-                <a href=""></a>
+                <a href="shopCar.html"></a>
             </div>
         </div>
     </header>
