--- a/register.html
+++ b/register.html
@@ -31,7 +31,7 @@
                         <input type="password" placeholder="密码">
                     </div>
                 </section>
-                <section class="password input">
+                <section class="rePassword input">
                     <div class="input-container">
                         <span class="icon"><i></i></span>
                         <input type="password" placeholder="重复密码">
@@ -50,9 +50,10 @@
                         </p>
                     </div>
                 </section>
+                <section class="tips"></section>
             </div>
         </div>
     </main>
 </body>
-
+<script src="libs/require.js" data-main="js/registerMain"></script>
 </html>
