--- a/public.html
+++ b/public.html
@@ -2,7 +2,7 @@
         <h1></h1>
         <div class="header-container">
             <ul>
-                <li class="active">在线商城</li>
+                <li class="active"><a href="index.html">在线商城</a></li>
                 <li>坚果Pro 3</li>
                 <li>坚果Pro 2S</li>
                 <li>坚果TNT工作站</li>
